--- a/AndroidApp/choresMonger/res/layout/main_menu.xml
+++ b/AndroidApp/choresMonger/res/layout/main_menu.xml
@@ -1,141 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent"
-  android:orientation="vertical"
-  android:background="#4062F7">
-  
-    <TableLayout
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content"
-	android:stretchColumns="*">
-	
-	<TableRow
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content">
-	
-	 <ImageView
-	android:layout_width="wrap_content" 
-	android:layout_height="wrap_content"
-	android:src="@drawable/choresmonger"
-	android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true">
-	</ImageView>
-	        <TextView
-            android:layout_height="wrap_content"
-            android:text="Chore Monger"
-            android:textSize="8pt"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="10"
-            android:layout_width="wrap_content"
-            android:layout_gravity="fill_horizontal|center"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:textColor="#FFF"/>
-  	</TableRow>
-  
-  	<TableRow
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content"
-	android:background="#eee">
-	
-	
-<TextView
-	android:id="@+id/TextView_greeting"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:textSize="8pt"
-    android:textColor="#00331A"/>
-	<TextView
-    android:id="@+id/TextView_DisplayNameVal"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:textSize="8pt"
-    android:textColor="#00331A"/>
-	
-	</TableRow>
-<TableRow 
-	android:layout_width="fill_parent" 
-	android:layout_height="wrap_content"
-	android:background="#eee"
-	android:paddingTop="5px"
-	android:paddingBottom="5px">
-		
-	<TextView
-    	android:layout_height="wrap_content"
-    	android:layout_width="wrap_content"
-    	android:textColor="#00331A"
-    	android:textSize="8pt"
-    	android:text="Assigned Chores: "/>
-  
-  	<TextView
-    	android:id="@+id/TextView_assignedChoresVal"
-    	android:layout_height="wrap_content"
-    	android:layout_width="wrap_content"
-    	android:textSize="8pt"
-    	android:textColor="#00331A"/>
-    	</TableRow>
- 	<TableRow android:layout_width="fill_parent" 
-		android:layout_height="wrap_content"
-		android:background="#eee"
-		android:paddingTop="5px"
-		android:paddingBottom="5px">
-		
-   	<TextView
-    	android:layout_height="wrap_content"
-    	android:layout_width="wrap_content"
-    	android:textColor="#00331A"
-    	android:textSize="8pt"
-    	android:text="Earned Points: "/>
-  
-  	<TextView
-    	android:id="@+id/TextView_usrEarnedPointsVal"
-    	android:layout_height="wrap_content"
-    	android:layout_width="wrap_content"
-    	android:textSize="8pt"
-    	android:textColor="#00331A"/>
-    </TableRow>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:orientation="vertical" android:background="#4062F7">
 
-	<TableRow 
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content"
-		android:background="#1A0019"
-		android:paddingTop="5px"
-		android:paddingBottom="5px">
-            <Button
-         android:id="@+id/Button_ChoresManagement"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:text="Chores Management"></Button>
-         
-	</TableRow>
-		<TableRow
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content"
-		android:background="#1A0019"
-		android:paddingTop="5px"
-		android:paddingBottom="5px">
-		
-	   <Button
-         android:id="@+id/Button_UserManagement"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:text="User Management"></Button>
-	
-	</TableRow>
-	
-			<TableRow 
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content"
-		android:background="#1A0019"
-		android:paddingTop="5px"
-		android:paddingBottom="5px">
-	   <Button android:text="Rewards Center" android:id="@+id/Button_RewardsCenter" android:layout_height="wrap_content" android:layout_width="fill_parent"></Button>
-	
-	</TableRow>
+	<TableLayout android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:stretchColumns="*">
 
-  </TableLayout>
-  
+		<TableRow android:layout_width="fill_parent"
+			android:layout_height="wrap_content">
+
+			<ImageView android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:src="@drawable/choresmonger"
+				android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
+			</ImageView>
+			<TextView android:layout_height="wrap_content" android:text="Chore Monger"
+				android:textSize="8pt" android:shadowDx="0" android:shadowDy="0"
+				android:shadowRadius="10" android:layout_width="wrap_content"
+				android:layout_gravity="fill_horizontal|center"
+				android:layout_alignParentTop="true"
+				android:layout_centerHorizontal="true" android:textColor="#FFF" />
+		</TableRow>
+
+		<TableRow android:layout_width="fill_parent"
+			android:layout_height="wrap_content" android:background="#eee">
+
+
+			<TextView android:id="@+id/TextView_greeting"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:textSize="8pt" android:textColor="#00331A" />
+			<TextView android:id="@+id/TextView_DisplayNameVal"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:textSize="8pt" android:textColor="#00331A" />
+
+		</TableRow>
+		<TableRow android:layout_width="fill_parent"
+			android:layout_height="wrap_content" android:background="#eee"
+			android:paddingTop="5px" android:paddingBottom="5px">
+
+			<TextView android:layout_height="wrap_content"
+				android:layout_width="wrap_content" android:textColor="#00331A"
+				android:textSize="8pt" android:text="Earned Points: " />
+
+			<TextView android:id="@+id/TextView_usrEarnedPointsVal"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:textSize="8pt" android:textColor="#00331A" />
+		</TableRow>
+
+		<TableRow android:layout_width="fill_parent"
+			android:layout_height="wrap_content" android:background="#1A0019"
+			android:paddingTop="5px" android:paddingBottom="5px">
+			<Button android:id="@+id/Button_ChoresManagement"
+				android:layout_width="fill_parent" android:layout_height="wrap_content"
+				android:layout_span="2" android:text="Chores Management"></Button>
+
+		</TableRow>
+		<TableRow android:layout_width="fill_parent"
+			android:layout_height="wrap_content" android:background="#1A0019"
+			android:paddingTop="5px" android:paddingBottom="5px">
+
+			<Button android:id="@+id/Button_UserManagement"
+				android:layout_width="fill_parent" android:layout_height="wrap_content"
+				android:layout_span="2" android:text="User Management"></Button>
+
+		</TableRow>
+
+		<TableRow android:layout_width="fill_parent"
+			android:layout_height="wrap_content" android:background="#1A0019"
+			android:paddingTop="5px" android:paddingBottom="5px">
+			<Button android:text="Rewards Center" android:id="@+id/Button_RewardsCenter"
+				android:layout_span="2" android:layout_height="wrap_content"
+				android:layout_width="fill_parent"></Button>
+
+		</TableRow>
+
+	</TableLayout>
+
 </LinearLayout>
